--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       "esri/views/MapView"
     ], function (esriConfig,Map, MapView) {
 
-      esriConfig.apiKey = "AAPK2cb19acc98eb406b80346e85af5aa1ffagWp07_WJVQlFAY2XL6xGrQ86USz9K6UzB1OaBd37PTIlYdHTo04S0-F9ETbr-dC";
+      esriConfig.apiKey = "AAPTxy8BH1VEsoebNVZXo8HurNAUgv3aeRUmzJ4ckMevLQKGrztJzvz8D2QfKCuiIu54WbPlskmjLz88V5wSYmtqL3EjWZp4G4nHsqYkAlxt489Rm-_9dWjmLJ7-jHITkInkrZrzwuuUkTEZSylEstRmXtTR3XCDY8wtl30bS-Cfx1Z9hfg8u3K69qi4g0Pbpk8J8uDtDelvM12x7UhFMGmxscZ2IupKzNYt_s-p6r8Sfq0.AT1_pCWailZs";
       const map = new Map({
         basemap: "arcgis-topographic" // Basemap layer
       });
