Change point graphic style to diamond in index.html

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
       // Create a symbol for drawing the point
       const simpleMarkerSymbol = {
         type: "simple-marker",
+        style: "diamond",    //challange 1 - change the style to diamond
         color: [0, 0, 139], // Blue
         outline: {
           color: [255, 255, 255], // White
