Update popup template image source to new file name in index.html

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       // Define the popup template
       const popupTemplate = {
         title: "Stevie Ray Vaughan Statue",
-        content: "<img src='Stevie_Ray_Vaughan_Memorial_Helmick.jpg' alt='Stevie Ray Vaughan Statue' style='width:100%;'>"
+        content: "<img src='stevieray.jpg' alt='Stevie Ray Vaughan Statue' style='width:100%;'>"
       };
 
       // Create a graphic and add the geometry, symbol, attributes, and popupTemplate to it
