--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
       "esri/layers/GraphicsLayer",
       "esri/Graphic",
       "esri/geometry/Point",
-      "esri/symbols/SimpleMarkerSymbol"
-    ], function (esriConfig, Map, MapView, GraphicsLayer, Graphic, Point, SimpleMarkerSymbol) {
+      "esri/symbols/SimpleMarkerSymbol",
+      "esri/PopupTemplate"
+    ], function (esriConfig, Map, MapView, GraphicsLayer, Graphic, Point, SimpleMarkerSymbol,popupTemplate) {
 
       esriConfig.apiKey = "AAPTxy8BH1VEsoebNVZXo8HurNAUgv3aeRUmzJ4ckMevLQKGrztJzvz8D2QfKCuiIu54kuPlJgQ5LaYndfRIaWOj-l62Dkhw1ar_Y7pSWDINLJdo0SOuys_MN4exQu3ZCeYZLk9JtMFQfS8DTHxOhq5pm0i-sjFpuDWcC71yFMKkj_2DFL528sZRGUlAOs6-ULTW8bY3iTtCMjOBFA05re8GpjKasI2A5QamySWtbjhq0SU.AT1_pCWailZs";
       
