--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
       "esri/Graphic",
       "esri/geometry/Point",
       "esri/symbols/SimpleMarkerSymbol",
-      "esri/PopupTemplate"
-    ], function (esriConfig, Map, MapView, GraphicsLayer, Graphic, Point, SimpleMarkerSymbol,PopupTemplate) {
+      "esri/PopupTemplate",
+      //adding in the module for the feature layers
+      "esri/layers/FeatureLayer"
+    ], function (esriConfig, Map, MapView, GraphicsLayer, Graphic, Point, SimpleMarkerSymbol,PopupTemplate,FeatureLayer) {
 
       esriConfig.apiKey = "AAPTxy8BH1VEsoebNVZXo8HurNAUgv3aeRUmzJ4ckMevLQKGrztJzvz8D2QfKCuiIu54kuPlJgQ5LaYndfRIaWOj-l62Dkhw1ar_Y7pSWDINLJdo0SOuys_MN4exQu3ZCeYZLk9JtMFQfS8DTHxOhq5pm0i-sjFpuDWcC71yFMKkj_2DFL528sZRGUlAOs6-ULTW8bY3iTtCMjOBFA05re8GpjKasI2A5QamySWtbjhq0SU.AT1_pCWailZs";
       
@@ -72,6 +74,14 @@
 
       // Add the graphic to the view's graphics layer
       graphicsLayer.add(pointGraphic);
+
+      // Create a FeatureLayer
+      const usaeduLayer = new FeatureLayer({
+        url: "https://services2.arcgis.com/FiaPA4ga0iQKduv3/arcgis/rest/services/Colleges_and_Universities_View/FeatureServer" // URL from AGOL Item Page
+      });
+      map.add(usaeduLayer);
+
+
     });
   </script>
 
